Fixed scrollbar in swag screen, and centred headings in radio buttons

--- a/media/CSS/style.css
+++ b/media/CSS/style.css
@@ -86,6 +86,9 @@ GtkWindow {
     background: #ffffff;
     border-radius: 0;
 }
+.header_button {
+    background: transparent;
+}
 
 .header_button:active {
     background: @button_color;
